[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/textures/sprite/base_char.res" type="SpriteFrames" id=1]
[ext_resource path="res://Scenes/Player/PlayerWorld.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/InteractDetector.gd" type="Script" id=3]
[ext_resource path="res://resources/textures/sprite/lightcookie_nodither.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Player/LightFlicker.gd" type="Script" id=5]
[ext_resource path="res://resources/textures/sprite/interact_notifier.png" type="Texture" id=6]
[ext_resource path="res://resources/sound/sfx/confirmation_blip.ogg" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 8.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="PlayerWorld" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = ExtResource( 1 )
animation = "Stand_down"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="InteractDetector" type="Area2D" parent="."]
script = ExtResource( 3 )
GroupName = "interactable"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractDetector"]
shape = SubResource( 2 )

[node name="InteractionCooldown" type="Timer" parent="."]
wait_time = 0.25

[node name="Light2D" type="Light2D" parent="." groups=[
"player",
]]
position = Vector2( 2, -1 )
texture = ExtResource( 4 )
mode = 2
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_gradient_length = 1.0
shadow_filter = 5
shadow_filter_smooth = 9.6
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}
FlickerRange = 0.1

[node name="InteractNotifier" type="Sprite" parent="."]
position = Vector2( 7, -14 )
texture = ExtResource( 6 )

[node name="InteractSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="InteractDetector" to="InteractDetector" method="_on_InteractDetector_body_entered"]
[connection signal="body_exited" from="InteractDetector" to="InteractDetector" method="_on_InteractDetector_body_exited"]
[connection signal="timeout" from="InteractionCooldown" to="." method="_on_InteractionCooldown_timeout"]
